Changes done to the Interval Arithmetic package.

Version 4.101 on ?? June 2001
- Remove warnings in the test-suite.
- Regenerate filters for the new equal_planeC3.
- Use the new macros in include/CGAL/Kernel/interface_macros.h for
  Filtered_kernel and Kernel_checker.

Version 4.100 on 20 June 2001
- Arithmetic_filter.h => Filtered_exact.h.

Version 4.99 on 12 June 2001
- Add missing #include <CGAL/misc.h> since it's not done in basic.h anymore.
- Workaround for GCC 3 only activated for 3.0.0 as it's probably going to be
  fixed in 3.0.1, so that we'll get the full speed back with 3.0.1.

Version 4.98 on 7 June 2001
- Move MP_Float to the Number_types package.

Version 4.97 on 6 June 2001
- Workaround bugs and misfeatures of GCC 3 in FPU.h.
  Unfortunately at a performance cost :((

Version 4.96 on 6 June 2001
- First version of Kernel_checker, which works only for predicates.

Version 4.95 on 5 June 2001
- Add a workaround on OSF/Alpha for GCC's too agressive fixincludes in FPU.h.
- Fix MP_Float::operator-() which died in an endless loop...

Version 4.94 on 30 May 2001
- Remove Compare_distance_to_point_[23].

Version 4.93 on 29 May 2001
- Add Compare_distance_[23].

Version 4.92 on 28 May 2001
- Fix bug spotted by BCC.
- Don't submit tst_static_adaptatif.
- Add inline to compare(MP_Float).

Version 4.91 on 23 May 2001
- Add a simple test for Quotient<MP_Float>.

Version 4.90 on 23 May 2001
- Rename Filtered_predicate to Filter_predicate.
- Put Filter_predicate'operators() non-inline, except for VC++.
- Fix for Borland.

Version 4.89 on 23 May 2001
- Workaround what seems to be a bug in KCC with non-inline overloading of
  inline templates.

Version 4.88 on 16 May 2001
- Added operator> and operator!= to Interval_base.
- Handle Angles.

Version 4.87 on 27 April 2001
- Rename coplanar_side_of_oriented_circle to bounded.

Version 4.86 on 27 April 2001
- Rename construct_tetrahedron_object to construct_tetrahedron_3_object.

Version 4.85 on 18 April 2001