@@ -1,19 +1,22 @@
 
 // Test program for the kernel checker.
 
-#include <CGAL/basic.h>
+// Workaround for buggy compilers.
+#ifdef CGAL_CFG_MATCHING_BUG_2
+#  define CGAL_IA_CT double
+#  define CGAL_IA_PROTECTED true
+#  define CGAL_IA_CACHE No_Filter_Cache
+#  define CGAL_IA_ET CGAL::MP_Float
+#endif
 
 #include <CGAL/Cartesian.h>
 #include <CGAL/Kernel_checker.h>
 #include <CGAL/Cartesian_converter.h>
 
-#include <CGAL/Point_3.h>
-
 #include <CGAL/MP_Float.h>
 #include <CGAL/Filtered_exact.h>
 #include <CGAL/Random.h>
 
-#include <CGAL/Triangulation_data_structure_3.h>
 #include <CGAL/Delaunay_triangulation_3.h>
 
 typedef CGAL::Filtered_exact<double, CGAL::MP_Float> NT1;
@@ -34,11 +37,7 @@ typedef CGAL::Kernel_checker<K1, K2, CGAL::Cartesian_converter<K1, K2, conv> >
         Rep;
 
 typedef Rep::RT  NT;
-typedef Rep Gt3d;
-typedef CGAL::Triangulation_vertex_base_3<Gt3d> Vb3d;
-typedef CGAL::Triangulation_cell_base_3<Gt3d> Ce3d;
-typedef CGAL::Triangulation_data_structure_3<Vb3d,Ce3d> Tds3d;
-typedef CGAL::Delaunay_triangulation_3<Gt3d, Tds3d> Delaunay3d;
+typedef CGAL::Delaunay_triangulation_3<Rep> Delaunay3d;
 
 int my_rand()
 {
